syntax = "proto3"; // Use the latest proto syntax

option csharp_namespace = "ElearnGrpc"; //Namespace for our proto

service Post {
  rpc GetPost (PostLookupModel) returns (PostModel);
  rpc GetAllPost (NewPostRequest) returns (stream PostModel);
}

message NewPostRequest {

}

message PostLookupModel {
  string url = 1;
}

message PostModel {
  int64 id = 1;
  string body = 2;
  string title = 3;
}